--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+#root{
+  margin:10px auto;
+  padding: 20px;
+  width: 700px;
+  min-height:700px;
+  box-shadow:0px 0px 8px #666666;
+}
+p{
+  text-indent:2em;
+}
